--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,10 @@
     { "src": "/api/logs", "dest": "/api/logs.js" },
     { "src": "/api/chat", "dest": "/api/chat.js" },
     { "src": "/api/tasks", "dest": "/api/tasks.js" },
+    { "src": "/api/publish", "dest": "/api/publish.js" },
+    { "src": "/api/outreach", "dest": "/api/outreach.js" },
+    { "src": "/api/quick-action", "dest": "/api/quick-action.js" },
+    { "src": "/api/artifacts", "dest": "/api/artifacts.js" },
     { "src": "/api/dashboard/(.*)", "dest": "/api/live-dashboard.js" },
     { "src": "/api/(.*)", "dest": "/api/index.js" },
     { "src": "/", "dest": "/dashboard/index.html" }
